fix: align tiles

--- a/src/pages/Misc/HowItWorks/HowItWorks.module.scss
+++ b/src/pages/Misc/HowItWorks/HowItWorks.module.scss
@@ -92,8 +92,6 @@
 
 @media only screen and (max-width: g.$screen-small) {
   .inventBanner {
-    margin: 0 20px;
-
     .inventLogo {
       width: 200px;
     }
